fix vertical align of choice-author, fix unexpected headerbox ref problem

--- a/src/components/Choices.css
+++ b/src/components/Choices.css
@@ -136,6 +136,7 @@ div.colorBlock.choice {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  vertical-align: bottom;
 }
 
 
